2010-09-24  Kirit Saelensminde  <kirit@felspar.com>
 Errors connecting to sockets are now reported as instances of fostlib::exceptions::connect_failure. Socket errors are now all sub-classes of fostlib::exceptions::socket_error. Reads now also time out and throw a fostlib::exceptions::read_timout exception.

2010-09-19  Kirit Saelensminde  <kirit@felspar.com>
 fostlib::url::query_string objects can now be coerced from fostlib::string objects.

2010-06-02  Kirit Saelensminde  <kirit@felspar.com>
 Fost authentication
 - Fixed the signature so that it signs the query string when there is
   no post data.

2010-05-31  Kirit Saelensminde  <kirit@felspar.com>
 Fost authentication
 - Added a utility function to add the authentication to a user agent.

2010-05-30  Kirit Saelensminde  <kirit@felspar.com>
 Host
 - A host can now be configured with a port number as the service.

2010-04-28  Kirit Saelensminde  <kirit@felspar.com>
 Web server
 - Added the 207 response code
 - URLs may contain bangs (!)

2010-04-06  Kirit Saelensminde  <kirit@felspar.com>
 Parsers
 - Removed the parser instances because they're not thread safe.
 MIME
 - Added support for multiple headers of the same name.
 HTTP client
 - Corrected behaviour for 304 responses.

2010-04-05  Kirit Saelensminde  <kirit@felspar.com>
 URL
 - The query string can now be any sequence rather than only a map of
 - key/value pairs.
 HTTP client/server
 - Added more allowable characters to the resource parser for HTTP requests.
 - The server request now supports handling of bad requests.
 - The HTTP client post and put short cuts now accept all data types
   supported by the request.
 - Changed the type of the server request query string to match that of the
   URL.
 - The parsing of the beginning of the HTTP request by the server is now
   protected by a mutex because Boost.Spirit is not thread safe.
 Host
 - Added JSON coercions for fostlib::host.

2010-04-02  Kirit Saelensminde  <kirit@felspar.com>
 URL